[gd_scene load_steps=26 format=3 uid="uid://ceyo23uu67e8h"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Top_Bar/TopBar.gd" id="1_f5hja"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/TextBoxes/FloatInput.gd" id="3_v82xb"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Buttons/TextureButton_Element.gd" id="5_14sro"]
[ext_resource type="Texture2D" uid="uid://dsr0vah60elhm" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_S.png" id="6_ih1jw"]
[ext_resource type="Texture2D" uid="uid://dyhv6lbkcn7p7" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_C.png" id="7_45nve"]
[ext_resource type="Texture2D" uid="uid://oxfay7smwqvx" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Circuit_Builder_S.png" id="8_1eqw8"]
[ext_resource type="Texture2D" uid="uid://bvfdqsx1q1j50" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Eye_S.png" id="8_lfa2g"]
[ext_resource type="Texture2D" uid="uid://dlfm8wiogystu" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_H.png" id="8_x5qfb"]
[ext_resource type="Texture2D" uid="uid://ch4waflhjqwnn" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_D.png" id="9_1uxxe"]
[ext_resource type="Texture2D" uid="uid://o4vvms6s82fa" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Quick_connect_S.png" id="9_fubes"]
[ext_resource type="Texture2D" uid="uid://b3vpe8qp6asrv" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Eye_C.png" id="9_oxjkc"]
[ext_resource type="Texture2D" uid="uid://dg5jf8jdebnk3" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Circuit_Builder_C.png" id="9_qi7k2"]
[ext_resource type="Texture2D" uid="uid://c24tdu3hkrylh" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Gear_S.png" id="10_4qsyc"]
[ext_resource type="Texture2D" uid="uid://c31uyob00duin" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Quick_connect_C.png" id="10_4usji"]
[ext_resource type="PackedScene" uid="uid://byvcu1dqoe5uo" path="res://Feagi-Godot-Interface/UI/Windows/Top_Bar/StateInidicator/StateInidicator.tscn" id="10_3567y"]
[ext_resource type="Texture2D" uid="uid://dsiheu8kyaq0j" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Circuit_Builder_H.png" id="10_gt74w"]
[ext_resource type="Texture2D" uid="uid://bnb721kmttvxc" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Eye_H.png" id="10_kkcrw"]
[ext_resource type="Texture2D" uid="uid://dke708beckn6n" path="res://Feagi-Godot-Interface/UI/Resources/Icons/tutorial.png" id="10_l8p1c"]
[ext_resource type="Texture2D" uid="uid://ble4yt676ik20" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Circuit_Builder_D.png" id="11_4km43"]
[ext_resource type="Texture2D" uid="uid://d3muoadd88u6f" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Eye_D.png" id="11_8kax8"]
[ext_resource type="Texture2D" uid="uid://cctv5e0kptwm6" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Gear_C.png" id="11_duudg"]
[ext_resource type="Texture2D" uid="uid://dn0taq1n56i0" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Quick_connect_H.png" id="11_vpuhf"]
[ext_resource type="Texture2D" uid="uid://df57fbu6vlk4w" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Quick_connect_D.png" id="12_imt3b"]
[ext_resource type="Texture2D" uid="uid://cpgnl7iwg1aye" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Gear_H.png" id="12_lr2vd"]
[ext_resource type="Texture2D" uid="uid://bqlfr4fu35bis" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Gear_D.png" id="13_nqinm"]

[node name="TopBar" type="Panel"]
offset_right = 1094.0
offset_bottom = 118.0
script = ExtResource("1_f5hja")
left_pixel_gap = 10
right_pixel_gap = 10
top_pixel_gap = 10
bottom_pixel_gap = 10

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1205.0
offset_bottom = 40.0

[node name="RR_Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Refresh Rate"
vertical_alignment = 1

[node name="RR_Float" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("3_v82xb")
suffix = " Hz"

[node name="Gap1" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="NC_Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Neuronal Circuits"
vertical_alignment = 1

[node name="NC_Button" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("6_ih1jw")
texture_pressed = ExtResource("7_45nve")
texture_hover = ExtResource("8_x5qfb")
texture_disabled = ExtResource("9_1uxxe")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_14sro")

[node name="Gap2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CA_Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Cortical Areas"
vertical_alignment = 1

[node name="CAView_Button" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("8_lfa2g")
texture_pressed = ExtResource("9_oxjkc")
texture_hover = ExtResource("10_kkcrw")
texture_disabled = ExtResource("11_8kax8")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_14sro")

[node name="CAAdd_Button" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("6_ih1jw")
texture_pressed = ExtResource("7_45nve")
texture_hover = ExtResource("8_x5qfb")
texture_disabled = ExtResource("9_1uxxe")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_14sro")

[node name="CAConnect_Button" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("9_fubes")
texture_pressed = ExtResource("10_4usji")
texture_hover = ExtResource("11_vpuhf")
texture_disabled = ExtResource("12_imt3b")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_14sro")

[node name="Gap3" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="NM_Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Neuron morphologies"
vertical_alignment = 1

[node name="NMAdd_Button" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("6_ih1jw")
texture_pressed = ExtResource("7_45nve")
texture_hover = ExtResource("8_x5qfb")
texture_disabled = ExtResource("9_1uxxe")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_14sro")

[node name="NMSettings_Button" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("10_4qsyc")
texture_pressed = ExtResource("11_duudg")
texture_hover = ExtResource("12_lr2vd")
texture_disabled = ExtResource("13_nqinm")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_14sro")

[node name="Gap4" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Mode_Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Circuit Builder"
vertical_alignment = 1

[node name="Mode_Button" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("8_1eqw8")
texture_pressed = ExtResource("9_qi7k2")
texture_hover = ExtResource("10_gt74w")
texture_disabled = ExtResource("11_4km43")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_14sro")

[node name="Gap5" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="TU_Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Tutorials"
vertical_alignment = 1

[node name="TU_Button" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("10_l8p1c")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_14sro")

[node name="Gap6" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Ping_label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Latency"
vertical_alignment = 1

[node name="ping" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Gap7" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="state_label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "System Health"
vertical_alignment = 1

[node name="StateIndicator" parent="HBoxContainer" instance=ExtResource("10_3567y")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
